--- a/package.json
+++ b/package.json
@@ -5,6 +5,18 @@
   "homepage": "https://remeapps.netlify.app/",
   "dependencies": {
     "@alexeika/date-picker-library": "^1.0.36",
+    "@editorjs/checklist": "^1.6.0",
+    "@editorjs/code": "^2.9.3",
+    "@editorjs/editorjs": "^2.30.7",
+    "@editorjs/embed": "^2.7.6",
+    "@editorjs/header": "^2.8.8",
+    "@editorjs/image": "^2.10.1",
+    "@editorjs/inline-code": "^1.5.1",
+    "@editorjs/list": "^2.0.2",
+    "@editorjs/marker": "^1.4.0",
+    "@editorjs/paragraph": "^2.11.7",
+    "@editorjs/simple-image": "^1.6.0",
+    "@editorjs/table": "^2.4.3",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -17,8 +29,15 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "draft-js": "^0.11.7",
+    "editorjs-alert": "^1.1.4",
+    "editorjs-change-case": "^0.0.3",
+    "editorjs-text-alignment-blocktune": "^1.0.3",
+    "editorjs-text-color-plugin": "^2.0.4",
     "firebase": "^10.8.0",
     "framer-motion": "^11.0.8",
+    "quill": "^2.0.3",
+    "quill-table": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
